<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".PushCDNAudienceActivity">

    <TextView
        android:id="@+id/tv_pushcdn_audience_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/pushcdn_page_title"/>


    <EditText
        android:id="@+id/et_pushcdn_audience_stream_id"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="32dp"
        android:textSize="12sp"
        android:text="abc123"
        android:hint="@string/pushcdn_please_input_streamid"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pushcdn_audience_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/pushcdn_audience_input_guide"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_pushcdn_audience_stream_id"
        app:layout_constraintStart_toStartOf="@+id/et_pushcdn_audience_stream_id" />

    <com.tencent.rtmp.ui.TXCloudVideoView
        android:id="@+id/videoview_pushcdn_audience"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_pushcdn_audience_stream_id"
        app:layout_constraintBottom_toTopOf="@id/btn_pushcdn_audience_play_cdn_stream"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <Button
        android:id="@+id/btn_pushcdn_audience_play_cdn_stream"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="66dp"
        android:text="@string/pushcdn_audience_start_play"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:background="@color/pushcdn_green_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>